fix: wrap both aria-label selectors with the skills builder modal class selector

--- a/src/skills-builder/skills-builder-modal/skillsBuilderModal.scss
+++ b/src/skills-builder/skills-builder-modal/skillsBuilderModal.scss
@@ -1,5 +1,7 @@
-button[aria-label="Close"][type="button"]{
-  color: $white;
+.skills-builder-modal {
+  button[aria-label="Close"][type="button"]{
+    color: $white;
+  }
 }
 
 $breakpoint-medium: 992px;
@@ -7,8 +9,10 @@ $breakpoint-medium: 992px;
   .med-min-height {
     min-height: map-get($spacers, 6);
   }
-  button[aria-label="Close"][type="button"]{
-    position: relative;
-    top: 0.5rem;
+  .skills-builder-modal {
+    button[aria-label="Close"][type="button"]{
+      position: relative;
+      top: 0.5rem;
+    }
   }
 }
